PairsView.cpp: Fix mismatching alloc and dealloc

Fixes #12834

Signed-off-by: John Scipione <jscipione@gmail.com>